--- a/html/artwork.html
+++ b/html/artwork.html
@@ -17,18 +17,30 @@
 	<body>
 		<div class="container">
 			<header>
-				<h1></h1>	
+				<h1>This is what I do<span> when i get bored</span></h1>		
 				<nav class="codrops-demos">
-					<a href="../index.html">About</a>
 					<a href="portfolio.html">Portfolio</a>
-					<a href="blog.html">Blog</a>
+					<a href="http://blog.daminisatya.info">Blog</a>
 					<a class="current-demo" href="artwork.html">Artwork</a>
 					<a href="talks.html">Talks</a>
-					<a href="contact.html">Contact</a>
+					<a href="contact.html">About</a>
 				</nav>
 			</header>
 			<ul class="grid effect-2" id="grid">
-				
+				<li><a href="http://drbl.in/fWMM"><img src="../images/1.jpg"></a></li>
+				<li><a href="http://drbl.in/fWPV"><img src="../images/3.jpg"></a></li>
+				<li><a href="http://drbl.in/fWMT"><img src="../images/4.jpg"></a></li>
+				<li><a href="http://drbl.in/fQdt"><img src="../images/12.png"></a></li>
+				<li><a href="http://drbl.in/fHaa"><img src="../images/13.png"></a></li>
+				<li><a href="http://drbl.in/gXMo"><img src="../images/10.png"></a></li>
+				<li><a href="http://drbl.in/gXMn"><img src="../images/9.jpg"></a></li>
+				<li><a href="http://drbl.in/fzYo"><img src="../images/2.jpg"></a></li>
+				<li><a href="http://drbl.in/fARU"><img src="../images/14.png"></a></li>
+				<li><a href="http://drbl.in/fGhI"><img src="../images/5.jpg"></a></li>
+				<li><a href="http://drbl.in/fKCf"><img src="../images/6.jpg"></a></li>
+				<li><a href="http://drbl.in/fLBG"><img src="../images/7.jpg"></a></li>
+				<li><a href="http://drbl.in/fPEY"><img src="../images/8.jpg"></a></li>
+				<li><a href="http://drbl.in/fWwG"><img src="../images/9.jpg"></a></li>
 			</ul>
 		</div>
 		<script src="../js/masonry.pkgd.min.js"></script>
