--- a/html/blog.html
+++ b/html/blog.html
@@ -19,12 +19,11 @@
 			<header>
 				<h1>Loading Effects for Grid Items <span>with CSS Animations</span></h1>	
 				<nav class="codrops-demos">
-					<a href="../index.html">About</a>
 					<a href="portfolio.html">Portfolio</a>
 					<a class="current-demo" href="blog.html">Blog</a>
 					<a href="artwork.html">Artwork</a>
 					<a href="talks.html">Talks</a>
-					<a href="contact.html">Contact</a>
+					<a href="contact.html">About</a>
 				</nav>
 			</header>
 			<ul class="grid effect-2" id="grid">
