--- a/html/contact.html
+++ b/html/contact.html
@@ -19,12 +19,11 @@
 			<header>
 				<h1>Feel free to contact me</h1>	
 				<nav class="codrops-demos">
-					<a href="../index.html">About</a>
 					<a href="portfolio.html">Portfolio</a>
-					<a href="blog.html">Blog</a>
+					<a href="http://blog.daminisatya.info">Blog</a>
 					<a href="artwork.html">Artwork</a>
 					<a href="talks.html">Talks</a>
-					<a class="current-demo" href="contact.html">Contact</a>
+					<a class="current-demo" href="contact.html">About</a>
 				</nav>
 			</header>
 			<ul class="grid effect-2" id="grid">
