--- a/index.html
+++ b/index.html
@@ -15,69 +15,21 @@
 		<script src="js/modernizr.custom.js"></script>
 	</head>
 	<body>
-		<div class="container">
+		<div class="container" style="margin: 7em;">
 			<header>
-				<h1>Welcome to my place <span>Blah Blah</span></h1>	
+				<h1>Welcome to my place <span>with your host Damini</span></h1>	
 				<nav class="codrops-demos">
-					<a class="current-demo" href="index.html">About</a>
 					<a href="html/portfolio.html">Portfolio</a>
-					<a href="html/blog.html">Blog</a>
+					<a href="http://blog.daminisatya.info">Blog</a>
 					<a href="html/artwork.html">Artwork</a>
 					<a href="html/talks.html">Talks</a>
-					<a href="html/contact.html">Contact</a>
+					<a href="html/contact.html">About</a>
 				</nav>
 			</header>
-			<ul class="aboutInfo">
-				<div>
-					<div id="window">
-					 	<div id="toolbar">
-							<div class="top">
-								<div id="lights">
-									<div class="light red">
-										<div class="glyph">×</div>
-										<div class="shine"></div>
-										<div class="glow"></div>
-									</div>				
-									<div class="light yellow">
-										<div class="glyph">-</div>
-										<div class="shine"></div>
-										<div class="glow"></div>
-									</div>
-									<div class="light green">
-										<div class="glyph">+</div>
-										<div class="shine"></div>
-										<div class="glow"></div>
-									</div>
-								</div>
-								<div id="title">
-									<div class="folder">
-										<div class="tab"></div>
-										<div class="body"></div>
-									</div>
-									daminisatya.info
-								</div>
-								<div id="bubble">
-									<div class="shine"></div>
-									<div class="glow"></div>
-								</div>
-							</div>
-						</div>
-						<div id="body">
-							<p> Last login: Thu May 24 12:18:16 on ttys006 <br />
-								Doms-MacBook-Pro:flight dom$  </p>	
-							<div class="cursor"></div>	
-						</div>	
-					</div>
-				</div>
-			</ul>
 		</div>
 		<script src="js/masonry.pkgd.min.js"></script>
 		<script src="js/imagesloaded.js"></script>
 		<script src="js/classie.js"></script>
 		<script src="js/AnimOnScroll.js"></script>
-		<script>
-			var myDiv = document.getElementById("container");
-			myDiv.scrollTop = myDiv.scrollHeight;
-		</script>
 	</body>
 </html>
