--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="element clearfix rectangle col2-2 home">
                 <div class="padding-wrapper">
                     <figure class="images">
-                        <img src="img/blog_main.jpg" alt="" />
+                        <img src="img/blogmain.jpg" alt="" />
                         <div class="covering-image visible">
                             <div class="info-box-content">
                                 <div class="parent">
