--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                         <div class="box-parent">
                             <div class="child">
                                 <div class="avatar">
-                                    <img src="img/top.JPG" alt="" /></div>
-                                <p class="small"><a href="blog.html" rel="category tag">BLOG</a></p>
-                                <h3 class="header">Elsa</h3>
-                                <p>All about Mental Health</p>
+                                    <img src="img/Brain.png" alt="" /></div>
+                                <p class="small"><a href="blog.html" rel="category tag"></a></p>
+                                <h3 class="header"><a href="blog.html" rel="category tag">Elsa</a></h3>
+                                <p><a href="blog.html" rel="category tag">All about Mental Health</a></p>
                             </div>
                         </div>
                     </div>
