--- a/blog.html
+++ b/blog.html
@@ -55,8 +55,8 @@
                                     <div class="info-box-content">
                                         <div class="parent">
                                             <div class="child">
-                                                <a><h2 class="header">BLOG</h2></a>
-                                                <h2 class="header"></h2>
+                                                <a><h2 class="header">Elsa</h2></a>
+                                                <h4 class="header">My journey exploring mental health in women and building Elsa</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -64,21 +64,14 @@
                             </figure>
                         </div>
                     </div>
+
                     <div class="element clearfix rectangle col1-1 home teaser">
                         <div class="padding-wrapper">
                             <a href="../../../index.html?p=73" title="">
                                 <figure class="images"> <img width="365" height="243" src="http://lorempixel.com/400/400" class="attachment-full size-full wp-post-image" alt="image03[1]" /></figure>
                             </a>
                             <div class="grey-bg">
-                                <p class="small categories"><a href="index.html" rel="category tag">Coming Soon</a></p>
-                                <a href="../../../index.html?p=73" title=""><h4 class="header"></h4></a>
-                                <div class="stats">
-                                    <p class="lefted">Coming Soon <span class="alignright">
-                                    <span class="padding"><a href="index.html#" class="zilla-likes" id="zilla-likes-54" title="Like this"><span class="zilla-likes-count"><i class="fa fa-heart"></i> 25</span> <span class="zilla-likes-postfix"></span></a>
-                                        </span> <a href="../../../index.html?p=54#comments" title=""><i class="fa fa-comments"></i>0</a>
-                                        </span>
-                                    </p>
-                                </div>
+                                <a href="../../../index.html?p=73" title=""><h5 class="header">Mental Health in Women and stats around it</h5></a>
                             </div>
                         </div>
                     </div>
@@ -89,75 +82,13 @@
                                 <figure class="images"> <img width="365" height="243" src="http://lorempixel.com/400/400" class="attachment-full size-full wp-post-image" alt="image03[1]" /></figure>
                             </a>
                             <div class="grey-bg">
-                                <p class="small categories"><a href="index.html" rel="category tag">Coming Soon</a></p>
-                                <a href="../../../index.html?p=73" title=""><h4 class="header"></h4></a>
-                                <div class="stats">
-                                    <p class="lefted">Coming Soon <span class="alignright">
-                                    <span class="padding"><a href="index.html#" class="zilla-likes" id="zilla-likes-54" title="Like this"><span class="zilla-likes-count"><i class="fa fa-heart"></i> 25</span> <span class="zilla-likes-postfix"></span></a>
-                                        </span> <a href="../../../index.html?p=54#comments" title=""><i class="fa fa-comments"></i>0</a>
-                                        </span>
-                                    </p>
-                                </div>
+                                <a href="../../../index.html?p=73" title=""><h5 class="header">Mental Health in Women and stats around it</h5></a>
                             </div>
                         </div>
                     </div>
 
-                    <div class="element clearfix rectangle col1-1 home teaser">
-                        <div class="padding-wrapper">
-                            <a href="../../../index.html?p=73" title="">
-                                <figure class="images"> <img width="365" height="243" src="http://lorempixel.com/400/400" class="attachment-full size-full wp-post-image" alt="image03[1]" /></figure>
-                            </a>
-                            <div class="grey-bg">
-                                <p class="small categories"><a href="index.html" rel="category tag">Coming Soon</a></p>
-                                <a href="../../../index.html?p=73" title=""><h4 class="header"></h4></a>
-                                <div class="stats">
-                                    <p class="lefted">Coming Soon <span class="alignright">
-                                    <span class="padding"><a href="index.html#" class="zilla-likes" id="zilla-likes-54" title="Like this"><span class="zilla-likes-count"><i class="fa fa-heart"></i> 25</span> <span class="zilla-likes-postfix"></span></a>
-                                        </span> <a href="../../../index.html?p=54#comments" title=""><i class="fa fa-comments"></i>0</a>
-                                        </span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="element clearfix rectangle col1-1 home teaser">
-                        <div class="padding-wrapper">
-                            <a href="../../../index.html?p=73" title="">
-                                <figure class="images"> <img width="365" height="243" src="img/blog_1.jpg" class="attachment-full size-full wp-post-image" alt="image03[1]" /></figure>
-                            </a>
-                            <div class="grey-bg">
-                                <p class="small categories"><a href="index.html" rel="category tag">Coming Soon</a></p>
-                                <a href="../../../index.html?p=73" title=""><h4 class="header"></h4></a>
-                                <div class="stats">
-                                    <p class="lefted">Coming Soon <span class="alignright">
-                                    <span class="padding"><a href="index.html#" class="zilla-likes" id="zilla-likes-54" title="Like this"><span class="zilla-likes-count"><i class="fa fa-heart"></i> 25</span> <span class="zilla-likes-postfix"></span></a>
-                                        </span> <a href="../../../index.html?p=54#comments" title=""><i class="fa fa-comments"></i>0</a>
-                                        </span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="element clearfix rectangle col1-1 home teaser">
-                        <div class="padding-wrapper">
-                            <a href="../../../index.html?p=73" title="">
-                                <figure class="images"> <img width="365" height="243" src="http://lorempixel.com/400/400" class="attachment-full size-full wp-post-image" alt="image03[1]" /></figure>
-                            </a>
-                            <div class="grey-bg">
-                                <p class="small categories"><a href="index.html" rel="category tag">Coming Soon</a></p>
-                                <a href="../../../index.html?p=73" title=""><h4 class="header"></h4></a>
-                                <div class="stats">
-                                    <p class="lefted">Coming Soon <span class="alignright">
-                                    <span class="padding"><a href="index.html#" class="zilla-likes" id="zilla-likes-54" title="Like this"><span class="zilla-likes-count"><i class="fa fa-heart"></i> 25</span> <span class="zilla-likes-postfix"></span></a>
-                                        </span> <a href="../../../index.html?p=54#comments" title=""><i class="fa fa-comments"></i>0</a>
-                                        </span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
