Update paintings and about me

--- a/about.html
+++ b/about.html
@@ -58,14 +58,24 @@
                                     Things which I really care and passionate about
 
                                     <ul style="font-size:18px; text-align:justify;" class="unordered-list">
-                                        <li> Computers </li>
-                                        <li> Contributing to open source </li>
-                                        <li> Building sustainable Open source communities </li>
-                                        <li> Diversity  </li>
-                                        <li> Mental Health (Elsa) and Self-care </li>
+
+                                        <li> <i><b>Computers </b></i> The complex circuits and workflows never fail to fascinate me. I'm still in the process of learning the deep internal components of my computer.
+                                        </li>
+
+                                        <li> <i><b>Contributing to Open Source </b></i> Something which I live and breath for! I boldly tell it out, <i>"I love Open Source Software"</i> I'm an ardent Open Source contributor and am part of various communities like Kubernetes, Loklak, Fossasia, Women Who Code and so on. 
+                                        </li>
+
+                                        <li> <i><b>Building sustainable Open Source communities </b></i> I'm a strong supporter of diversity and inclusive Open Source communities. I make sure all the community members feel inclusive and respected.
+                                        </li>
+
+                                        <li> <i><b>Mental Health (Elsa) and Self-care </b></i> Mental Health is very important and SHOULD be taken care of. As part of this initiative, I'm working on building Elsa - An AI conversational agent aimed at improving mental health. (I will be bloging about my journey building Elsa soon.)
+
+                                        Regarding Mental Health issues like depression, If you are looking for a friend or someone to just listen to your problems, I will be your best friend and try my best to help you out!
+                                        </li>
+
                                     </ul>
 
-                                If you really enjoy reading my blogs, do buzz me on Twitter @Daminisatya 
+                                If you really enjoy reading my blogs or want to just connect with me, do buzz me on Twitter @Daminisatya 
 
                                 </p>
                             </div>
