--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <figure class="images"> <img width="365" height="243" src="img/sketches.jpg" class="attachment-full size-full wp-post-image" alt="" /></figure>
                     </a>
                     <div class="grey-bg">
-                        <p class="small categories"><a href="sketches.html" rel="category tag">Talks</a></p>
+                        <p class="small categories"><a href="talks.html" rel="category tag">Talks</a></p>
                         <a href="sketches.htnl" title=""><h4 class="header">Tech talk journey</h4></a>
                     </div>
                 </div>
