--- a/painting.html
+++ b/painting.html
@@ -43,7 +43,7 @@
             <ul id="options" class="option-set clearfix" data-option-key="filter">
                 <li class="navLink"><a href='index.html' class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-home"><span>Home</span></a>
                 <li class="navLink"><a href='about.html' class=" menu-item menu-item-type-taxonomy menu-item-object-category"><span>About Me</span></a>
-                <li class="navLink"><a href='sketches.html' class=" menu-item menu-item-type-taxonomy menu-item-object-category"><span>Sketches</span></a>
+                <li class="navLink"><a href='talks.html' class=" menu-item menu-item-type-taxonomy menu-item-object-category"><span>Talks</span></a>
                 <li class="navLink"><a href='travel.html' class=" menu-item menu-item-type-taxonomy menu-item-object-category"><span>Travel</span></a>
                 <li class="navLink"><a href='painting.html' class=" menu-item menu-item-type-post_type menu-item-object-page"><span>Paintings</span></a>
                 <li class="navLink"><a href='opensource.html' class=" menu-item menu-item-type-post_type menu-item-object-page"><span>Efforts in Open Source</span></a>
